# tree-sitter-tet

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  flake.nix  go.mod  grammar.js  index.html.tet  package.json  pyproject.toml  result  setup.py  tree-sitter.json
bindings/c/: tree-sitter-tet.pc.in
bindings/c/tree_sitter/: tree-sitter-tet.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tet/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTetTests/: TreeSitterTetTests.swift
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c
