[package]
name = "tree-sitter-tet"
description = "Tet grammar for tree-sitter"
version = "0.1.0"
authors = ["readf0x"]
license = "GPL-v3.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "tet"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/readf0x/templating-engine"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
